Changed to grouping selectors solution
Clearly I did not understand the task properly, despite reaching the correct outcome

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,13 +1,14 @@
-.button {
+.black,
+.yellow {
     font-size: 28px;
     font-family: Helvetica, 'Times New Roman', sans-serif;
 }
 
-.button.yes {
+.black {
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
 }
 
-.button.no {
+.yellow {
     background-color: rgb(255, 255, 0);
 }
